tests/test_assets/semantic/valid/functions/return_paths.cog
return_good_direct::() -> i32 {
    return 1;
}

return_good_if::(b: bool) -> i32 {
    if b {
        return 1;
    } else {
        return 2;
    }
}