tests/test_assets/semantic/invalid/control_flow/missing_return_if.cog
return_bad_if::(b: bool) -> i32 {
    if b {
        return 1;
    }
}